2009-02-05  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-14
        * Move PPrMon to ESDtoAOD step.

2009-02-05  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-13
        * Mods for TrigT1CaloByteStream-00-08-02 and move some tools
          to ESDtoAOD step on Tier0.  Global plot moved to separate
          tool as needed in both steps.

2009-01-27  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-12
        * Fix bin error in JEMMon.cxx

2009-01-20  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-11
        * PPM: Avoid duplication of per run plots and merged per lumi plots,
          change all 1D slice plots to 0-14 range (no 1-15).
          For now, comment out code with 64-bit id fix to avoid having to branch.
          It's not used by default anyway.

2010-01-12  RD Schaffer  <R.D.Schaffer@cern.ch>

        * Tag as TrigT1CaloMonitoring-00-06-10
	* src/PPrMon.cxx (fillHistograms): fix for 64-bit id migration

2009-12-08  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-09
        * Make jobOptions aware of processing step on Tier0.

2009-11-24  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-08
        * Updates to PPM monitoring.

2009-11-19  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-07
        * Updates to PPM monitoring mainly.

2009-09-29  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-06
        * Add option to allow exclusion of corrupt events from plots

2009-09-24  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-05
        * Exclude corrupt events from most histograms.

2009-09-22  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-04
        * Update ROB status bits to tdaq-02-00-00.
