@@ -5,6 +5,7 @@
 #include "TrigT1CaloMonitoring/CPMSimBSMon.h"
 #include "TrigT1CaloMonitoring/JEPSimBSMon.h"
 #include "TrigT1CaloMonitoring/PPrMon.h"
+#include "TrigT1CaloMonitoring/PPrSpareMon.h"
 #include "TrigT1CaloMonitoring/JEMMon.h"
 #include "TrigT1CaloMonitoring/CMMMon.h"
 #include "TrigT1CaloMonitoring/PPrPerfMon.h"
@@ -19,6 +20,7 @@ DECLARE_TOOL_FACTORY(TrigT1CaloMonErrorTool )
 DECLARE_TOOL_FACTORY(CPMSimBSMon)
 DECLARE_TOOL_FACTORY(JEPSimBSMon)
 DECLARE_TOOL_FACTORY(PPrMon)
+DECLARE_TOOL_FACTORY(PPrSpareMon)
 DECLARE_TOOL_FACTORY(JEMMon)
 DECLARE_TOOL_FACTORY(CMMMon)
 DECLARE_TOOL_FACTORY(PPrPerfMon)
@@ -31,6 +33,7 @@ DECLARE_FACTORY_ENTRIES(TrigT1CaloMonitoring) {
   DECLARE_ALGTOOL(CPMSimBSMon);
   DECLARE_ALGTOOL(JEPSimBSMon);
   DECLARE_ALGTOOL(PPrMon);
+  DECLARE_ALGTOOL(PPrSpareMon);
   DECLARE_ALGTOOL(JEMMon);
   DECLARE_ALGTOOL(CMMMon);
   DECLARE_ALGTOOL(PPrPerfMon);
